# dj-obj-update

./: .gitignore  .travis.yml  CHANGELOG.md  Makefile  README.md  README.rst  obj_update.py  pyproject.toml  requirements.txt  settings.py  setup.py  test_obj_update.py  test_settings.py  tox.ini
.github/workflows/: ci.yml
dummy/: models.py
test_app/: models.py  settings.py
